fix layout bug

--- a/client/src/components/title/Title.css
+++ b/client/src/components/title/Title.css
@@ -24,6 +24,11 @@
         justify-content: space-evenly;
     
     }
+    .p-block {
+       font-size:medium;
+        width:25vw;
+        
+    }
 }
 
  .logo {
